--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "/recipes", "destination": "/html/recipes.html" }]
+  "rewrites": [{ "source": "/recipes", "destination": "recipe.html" }]
 }
